[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "baysorpy"
version = "0.1.0"
authors = [
  { name="Viktor Petukhov" },
]
description = "A WIP for a python extension over Baysor package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.17.0",
    "matplotlib>=3.4",
    "pandas>=1.0",
    "scipy>=1.4",
    "tqdm",
    "scikit-learn>=0.22",
    "joblib",
    "juliacall",
    "umap-learn>=0.3.10",
    # "pytorch>=1.12",
    "pytorch-lightning>=1.8.0"
]

[project.urls]
"Homepage" = "https://github.com/vpetukhov/baysorpy"
"Bug Tracker" = "https://github.com/pypa/baysorpy/issues"
